specs/013-array-methods/examples/invalid/map-callback-param-type.ts
let xs: int[] = [1, 2, 3];
let bad = xs.map((x: string) => x);
console.log(bad.length);
